# DomainSniperCpp

./: .gitignore  CMakeLists.txt  app.rc  imgui.ini  main.cpp  readme.md  resource.h
.github/workflows/: build.yml
engine/: Dictionary.cpp  Dictionary.h  IcpScanner.cpp  IcpScanner.h  Scanner.cpp  Scanner.h
ui/: MainWindow.cpp  MainWindow.h
